--- a/project.json
+++ b/project.json
@@ -1,6 +1,7 @@
 {
   "version": "1.0.0-*",
   "buildOptions": {
+    "debugType": "portable",
     "emitEntryPoint": true
   },
   "dependencies": {
@@ -11,6 +12,14 @@
     "Microsoft.AspNetCore.Server.Kestrel": "1.0.0"
   },
   "frameworks": {
-    "netcoreapp1.0": { }
+    "netcoreapp1.0": {
+      "dependencies": {
+        "Microsoft.NETCore.App": {
+          "type": "platform",
+          "version": "1.0.0"
+        }
+      },
+      "imports": "dnxcore50"
+    }
   }
 }
